# industrial_ml

./: README.md  pyproject.toml
lab1/: lab1.ipynb
