[tool.poetry]
name = "industrial_ml"
version = "0.1.0"
description = ""
authors = ["Dmitriy Prusskiy", "Vladimir Barkovskiy"]

[tool.poetry.dependencies]
python = "~3.8.5"
pandas = "^1.5.1"
numpy = "^1.23.4"
matplotlib = "^3.6.2"
ipykernel = "^6.17.1"
jupyter = "^1.0.0"
tqdm = "^4.64.1"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
